updated loading of csv file from frontend, fixed parsing of csv data in backend; see #65928

--- a/manifest.yml
+++ b/manifest.yml
@@ -9,6 +9,7 @@ plugin:
       require: 1
   webfrontend:
     url: ZooniverseImportMenuApp.js
+    css: easydb-plugin-zooniverse-import.css
     l10n: l10n/
 
 python-2:
