--- a/manifest.master.yml
+++ b/manifest.master.yml
@@ -7,19 +7,20 @@ plugin:
   server:
     api-version:
       require: 1
-  # l10n: webfrontend/l10n/presentation-pptx.csv # l10n csv file for fylr
-  l10n: l10n/l10n.csv # l10n csv file for fylr
+  l10n: webfrontend/l10n/l10n.csv # l10n csv file for fylr
   webfrontend:
-    url: ZooniverseImportMenuApp.js
+    url: easydb-plugin-zooniverse-import.js
     css: easydb-plugin-zooniverse-import.css
     l10n: l10n/
+
+base_url_prefix: webfrontend
 
 system_rights:
   - name: allow_use
     group: zooniverse_import
 
 python-2:
-  file: src/server/main.py
+  file: server/main.py
 
 extensions:
   zooniverse_import:
@@ -31,7 +32,7 @@ extensions:
             type: "body"
           args:
             - type: "value"
-              value: "%_exec.pluginDir%/src/server/main-fylr.py"
+              value: "%_exec.pluginDir%/server/main-fylr.py"
             - type: "value"
               value: "%info.json%"
 
